@@ -1,0 +1,34 @@
+#
+# Common script
+#
+
+die()
+{
+    echo "$@" 1>&2
+    exit 1
+}
+
+while echo "$1" | egrep -qe '^--'
+do
+    OPT=$1
+    shift
+    case "${OPT}" in
+	*)
+	    die "Unknown option '${OPT}'"
+    esac
+done
+
+
+# Accept only one argument
+
+if [ "$#" -ne 1 ]
+then
+    echo "This type takes exactly one argument." 1>&2
+    exit 1
+fi
+
+[ -e "$1" ] || die "$1: No such file or directory"
+
+DIR=$(readlink -e "$1")
+
+[ -d "${DIR}" ] || die "${DIR}: Not a directory."
