@@ -1,0 +1,7 @@
+#!/bin/sh -e
+#
+# Figure out what the actual build directory should be relative to $1.
+
+echo "$1"
+
+exit 0
