@@ -3,7 +3,7 @@
 # build - Do the default build.
 #
 
-COMMON="$(dirname $0)/../common"
+COMMON="$(dirname $0)/../../common"
 if [ -e "${COMMON}" ]
 then
     . "${COMMON}"
