@@ -3,7 +3,7 @@
 # gather - Gather all products into a single directory
 #
 
-COMMON="$(dirname $0)/../common"
+COMMON="$(dirname $0)/../../common"
 if [ -e "${COMMON}" ]
 then
     . "${COMMON}"
